k8s/react-frontend-app2-new/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: ameen2607-dev
spec:
  selector:
    app: react-frontend
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
