k8s/react-frontend-app2-new/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: react-route
  namespace: ameen2607-dev
spec:
  to:
    kind: Service
    name: react-service
  port:
    targetPort: 8081
  tls:
    termination: edge
